--- a/home_en.html
+++ b/home_en.html
@@ -20,12 +20,12 @@
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
 <header>
-<h1>AI Guidance Chatbot for Foreigners</h1><!-- 大見出し -->
+<h1>Foreigners Asst</h1><!-- 大見出し -->
 </header>
 <div>
 <main>
 <section>
-<h2>What is an Guidance Chatbot for Foreigners?</h2><!-- 見出し -->
+<h2>What is an Foreigners Asst?</h2><!-- 見出し -->
 <!-- 本文　ここから -->
 <p>This site does not know where foreigners should go through public service procedures,especially paying and receiving utility bills,
 forgetting to pay the money they have to pay,
