--- a/home_id.html
+++ b/home_id.html
@@ -20,12 +20,12 @@
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
 <header>
-<h1>chatbot AI untuk orang asing</h1><!-- 大見出し -->
+<h1>Foreigners Asst</h1><!-- 大見出し -->
 </header>
 <div>
 <main>
 <section>
-<h2>Apa itu chatbot AI untuk orang asing?</h2><!-- 見出し -->
+<h2>Apa itu Foreigners Asst?</h2><!-- 見出し -->
 <!-- 本文　ここから -->
 <p>Situs ini adalah prosedur untuk layanan publik bagi orang asing,<br>
 Secara khusus, saya tidak tahu di mana harus membayar atau menerima tagihan listrik,<br>
