--- a/home_vn.html
+++ b/home_vn.html
@@ -26,7 +26,7 @@
 <p style="margin-top: -7.5px"></p><!-- ボタン位置直接変更 -->
 <main>
 <section>
-<h2>AI Chatbot hướng dẫn cho người nước ngoài là gì?</h2><!-- 見出し -->
+<h2>Foreigners Asst là gì?</h2><!-- 見出し -->
 <!-- 本文　ここから -->
 <p>Trang web này dành cho người nước ngoài đăng ký các dịch vụ công,<br>
 Đặc biệt là khi tôi không biết thanh toán hoặc làm thủ tục hướng dẫn ​ở đâu,<br>
