--- a/home_vn.html
+++ b/home_vn.html
@@ -20,7 +20,7 @@
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
 <header>
-<h1>AI Chatbot hướng dẫn cho người nước ngoài</h1><!-- 大見出し -->
+<h1>Foreigners Asst</h1><!-- 大見出し -->
 </header>
 <div>
 <p style="margin-top: -7.5px"></p><!-- ボタン位置直接変更 -->
