--- a/home_vn.html
+++ b/home_vn.html
@@ -20,13 +20,13 @@
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
 <header>
-<h1>Foreigners Asst</h1><!-- 大見出し -->
+<h1>Foreigners Assist</h1><!-- 大見出し -->
 </header>
 <div>
 <p style="margin-top: -7.5px"></p><!-- ボタン位置直接変更 -->
 <main>
 <section>
-<h2>Foreigners Asst là gì?</h2><!-- 見出し -->
+<h2>Foreigners Assist là gì?</h2><!-- 見出し -->
 <!-- 本文　ここから -->
 <p>Trang web này dành cho người nước ngoài đăng ký các dịch vụ công,<br>
 Đặc biệt là khi tôi không biết thanh toán hoặc làm thủ tục hướng dẫn ​ở đâu,<br>
