--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
 <header>
-<h1>Foreigners Asst</h1><!-- 大見出し -->
+<h1>Foreigners Assist</h1><!-- 大見出し -->
 </header>
 <div>
 <main>
 <section>
-<h2>Foreigners Asstとは</h2><!-- 見出し -->
+<h2>Foreigners Assistとは</h2><!-- 見出し -->
 <!-- 本文　ここから -->
 <p>このサイトは外国人の方が公共サービスの手続き、<br>
 特に公共料金の支払いや受け取りをどこですればいいか分からず、<br>
