--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
 <section>
 <h2>Foreigners Assistとは</h2><!-- 見出し -->
 <!-- 本文　ここから -->
-<p>このサイトは外国人の方が公共サービスの手続き、<br>
-特に公共料金の支払いや受け取りをどこですればいいか分からず、<br>
+<p>このサイトは岡山県内に住む外国人の方が公共サービスの手続き、<br>
+特に年金、税金、国民健康保険料の支払いをどこですればいいか、免除や控除はできるのか、といったことが分からず、<br>
 払わなければならないお金を払い忘れたときや、<br>
 どのようなルールがあるのか分からず、<br>
 もともと受けられたサポートやサービスを受けられないといった問題を<br>
 解決するためのサイトです。<br>
-右下のボタンを押して開始してください。</p>
+右下のボタンを押して開始してください。<br>
+また、ウェブサイトの言語を別の言語に切り替えた時、<br>
+チャットボットの言語が上手く切り替えられない場合は、<br>
+チャットボットの左上の矢印を押して戻り、<br>
+右上のマークを押して新しくチャットを開始してください。</p>
 <!-- 本文　ここまで -->
 </section>
 </main>
