--- a/home_id.html
+++ b/home_id.html
@@ -27,13 +27,15 @@
 <section>
 <h2>Apa itu Foreigners Assist?</h2><!-- 見出し -->
 <!-- 本文　ここから -->
-<p>Situs ini adalah prosedur untuk layanan publik bagi orang asing,<br>
-Secara khusus, saya tidak tahu di mana harus membayar atau menerima tagihan listrik,<br>
-Ketika Anda lupa membayar uang yang harus Anda bayar,<br>
-tidak tahu apa aturannya,<br>
-Masalah seperti tidak dapat menerima dukungan dan layanan yang awalnya diterima<br>
-Ini adalah situs untuk memecahkan masalah tersebut.<br>
-Tekan tombol di kanan bawah untuk memulai.</p>
+<p class="main">Situs ini adalah situs untuk orang asing yang tinggal di Prefektur Okayama,
+khususnya, saya tidak tahu harus berbuat apa untuk dapat dibebaskan atau dikurang biaya pensiun, pajak, dan asuransi kesehatan nasional.
+dan juga Ketika saya lupa membayar dan saya tidak tahu aturannya
+Masalah yang Anda tidak dapat menerima dukungan dan layanan yang diterima awalnya
+Ini adalah situs untuk pemecahan masalah!
+Tekan tombol kanan bawah untuk memulai.</p>
+<p class="hosoku">
+*ketika bahasa situs web beralih ke bahasa lain, jika chat bot obrolan tidak dapat diaktifkan dengan baik,
+tekan panah kiri atas di bot obrolan dan tekan tanda pada kanan atas untuk memulai obrolan baru.</p>
 <!-- 本文　ここまで -->
 </section>
 </main>
