--- a/home_vn.html
+++ b/home_vn.html
@@ -28,12 +28,16 @@
 <section>
 <h2>Foreigners Assist là gì?</h2><!-- 見出し -->
 <!-- 本文　ここから -->
-<p>Trang web này dành cho người nước ngoài đăng ký các dịch vụ công,<br>
-Đặc biệt là khi tôi không biết thanh toán hoặc làm thủ tục hướng dẫn ​ở đâu,<br>
-Khi bạn quên trả số tiền bạn phải trả,<br>
-Tôi không biết có những  quy tắc nào,<br>
-Các vấn đề như không thể nhận hỗ trợ và các dịch vụ đã nhận được ban đầu.<br>
+<p class="main">Trang web này dành cho người nước ngoài sống ở tỉnh Okayama để đăng ký các dịch vụ công.
+Đặc biệt,Khi bạn không biết nơi nào để thanh toán lương hưu, thuế, phí bảo hiểm y tế quốc gia chẳng hạn như có được miễn giảm hay không.
+Khi bạn quên trả số tiền bạn phải trả,
+Bạn không biết có những quy tắc nào,
+Các vấn đề như không thể nhận hỗ trợ và các dịch vụ đã nhận được ban đầu
+Đây là một trang web để giải quyết các vấn đề trên.
 Nhấn nút ở dưới cùng bên phải để bắt đầu.</p>
+<p class="hosoku">
+*Nếu bạn không thể chuyển đúng ngôn ngữ chatbot khi chuyển ngôn ngữ của trang web sang ngôn ngữ khác,
+ hãy nhấn vào mũi tên ở phía trên bên trái của chatbot để quay lại và nhấn dấu chấm ở phía trên bên phải để bắt đầu một cuộc trò chuyện mới.</p>
 <!-- 本文　ここまで -->
 </section>
 </main>
