--- a/home_en.html
+++ b/home_en.html
@@ -27,11 +27,16 @@
 <section>
 <h2>What is an Foreigners Assist?</h2><!-- 見出し -->
 <!-- 本文　ここから -->
-<p>This site does not know where foreigners should go through public service procedures,especially paying and receiving utility bills,
-forgetting to pay the money they have to pay,
-and not knowing what the rules are.<br>
-It is a site to solve problems such as not being able to receive the support and services that were originally received.<br>
-Press the button at the right bottom corner to start.</p>
+<p class="main">This site is for foreigners living in Okayama prefecture to apply for public services.
+In particular, I don't know where to pay [pension, tax, national health insurance ] whether exemptions or deductions are possible.
+or When you forget to pay the money you have to pay,
+I don't know what the rules are,
+Problems such as not being able to receive the support and services that were originally received
+It is a site to solve.
+Press the button at the bottom right to start.</p>
+<p class="hosoku">
+*If you cannot switch the chatbot language properly when you switch the language of the website to another language,
+press the arrow on the upper left of the chatbot to return, and press the mark on the upper right to start a new chat. </p>
 <!-- 本文　ここまで -->
 </section>
 </main>
