--- a/home_vn.html
+++ b/home_vn.html
@@ -32,7 +32,7 @@
 Đặc biệt,Khi bạn không biết nơi nào để thanh toán lương hưu, thuế, phí bảo hiểm y tế quốc gia chẳng hạn như có được miễn giảm hay không.
 Khi bạn quên trả số tiền bạn phải trả,
 Bạn không biết có những quy tắc nào,
-Các vấn đề như không thể nhận hỗ trợ và các dịch vụ đã nhận được ban đầu<br>
+Các vấn đề như không thể nhận hỗ trợ và các dịch vụ đã nhận được ban đầu.<br>
 Đây là một trang web để giải quyết các vấn đề trên.
 Nhấn nút ở dưới cùng bên phải để bắt đầu.</p>
 <p class="hosoku">
