--- a/home_vn.html
+++ b/home_vn.html
@@ -33,7 +33,7 @@
 Khi bạn quên trả số tiền bạn phải trả,
 Bạn không biết có những quy tắc nào,
 Các vấn đề như không thể nhận hỗ trợ và các dịch vụ đã nhận được ban đầu.<br>
-Đây là một trang web để giải quyết các vấn đề trên.
+Đây là một trang web để giải quyết các vấn đề trên.<br>
 Nhấn nút ở dưới cùng bên phải để bắt đầu.</p>
 <p class="hosoku">
 *Nếu bạn không thể chuyển đúng ngôn ngữ chatbot khi chuyển ngôn ngữ của trang web sang ngôn ngữ khác,
