--- a/home_vn.html
+++ b/home_vn.html
@@ -5,6 +5,7 @@
 <meta name="author" content="team4">
 <meta name="description" content="案内チャットボット">
 <title>ChatBot</title>
+<link rel="icon" href="favicon.ico">
 <link href="style.css" media="all" rel="stylesheet"><!-- CSS連携 -->
 <!-- グーグルフォント　ここから -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
