--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
 <footer>
 <p>Copyright 2021 ChatBot.</p>
 </footer>
-<!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/21066296.js"></script>
-<!-- End of HubSpot Embed Code -->
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="foreignersAsst"
+  agent-id="eead96f4-66fb-4340-8d6d-e637bfa77db7"
+  language-code="ja"
+></df-messenger>
 </body>
 </html>
