--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charsset="utf-8">
 <meta name="author" content="team4">
 <meta name="description" content="案内チャットボット">
-<title>ChatBot</title>
+<title>Foreigners Assist</title>
 <link rel="icon" href="favicon.ico">
 <link href="style.css" media="all" rel="stylesheet"><!-- CSS連携 -->
 <!-- グーグルフォント　ここから -->
