--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
 <footer>
 <p>Copyright 2021 ChatBot.</p>
 </footer>
+<style>
+  df-messenger {
+   --df-messenger-bot-message: white;
+   --df-messenger-button-titlebar-color: #dda0dd;
+   --df-messenger-chat-background-color: #fcf4fc;
+   --df-messenger-font-color: black;
+   --df-messenger-send-icon: #ba55d3;
+   --df-messenger-user-message: white;
+  }
+</style>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
