--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 </footer>
 <style>
   df-messenger {
-   --df-messenger-button-titlebar-color: white;
+   --df-messenger-bot-message: white;
+   --df-messenger-button-titlebar-color: #dda0dd;
    --df-messenger-chat-background-color: #fcf4fc;
    --df-messenger-font-color: black;
    --df-messenger-send-icon: #ba55d3;
