--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <style>
   df-messenger {
    --df-messenger-bot-message: white;
-   --df-messenger-button-titlebar-color: #fcf4fc;
+   --df-messenger-button-titlebar-color: #ee82ee;
    --df-messenger-chat-background-color: #fcf4fc;
    --df-messenger-font-color: black;
    --df-messenger-send-icon: #ba55d3;
