--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
+  chat-icon="https://d.kuku.lu/2b38ea2bd"
   chat-title="foreignersAsst"
   agent-id="eead96f4-66fb-4340-8d6d-e637bfa77db7"
   language-code="ja"
