--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 <a href="home_vn.html" class="btn btn-border">Tiếng Việt</a>
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
+<!-- ハンバーガーボタンここから -->
+<div class="hamburger-menu">
+<input type="checkbox" id="menu-btn-check">
+<label for="menu-btn-check" class="menu-btn"><span></span></label>
+</div>
+<!-- ハンバーガーボタンここまで -->
 <header>
 <h1>Foreigners Assist</h1><!-- 大見出し -->
 </header>
