--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
 <a href="home_vn.html" class="btn btn-border">Tiếng Việt</a>
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
-<!-- ハンバーガーボタンここから -->
-<div class="hamburger-menu">
-<input type="checkbox" id="menu-btn-check">
-<label for="menu-btn-check" class="menu-btn"><span></span></label>
-</div>
-<!-- ハンバーガーボタンここまで -->
 <header>
 <h1>Foreigners Assist</h1><!-- 大見出し -->
 </header>
@@ -40,13 +34,13 @@
 払わなければならないお金を払い忘れたときや、<br>
 どのようなルールがあるのか分からず、<br>
 もともと受けられたサポートやサービスを受けられないといった問題を<br>
-解決するためのサイトです。<br>
-右下のボタンを押して開始してください。</p>
-<p class="hosoku">
+解決するためのサイトです。<br></p>
+<!--<p class="hosoku">
 ※ウェブサイトの言語を別の言語に切り替えた時、<br>
 チャットボットの言語が上手く切り替えられない場合は、<br>
 チャットボットの左上の矢印を押して戻り、<br>
 右上のマークを押して新しくチャットを開始してください。</p>
+-->
 <!-- 本文　ここまで -->
 </section>
 </main>
