--- a/home_en.html
+++ b/home_en.html
@@ -20,6 +20,37 @@
 <a href="home_vn.html" class="btn btn-border">Tiếng Việt</a>
 <a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
 <!-- ボタン ここまで -->
+<!-- ハンバーガーボタンここから -->
+ <div class="humb-menu">
+    <input id="gnav-input" type="checkbox">
+    <label for="gnav-input" id="gnav-btn">
+      <img src="image/menu.png" alt="menu">
+    </label>
+
+    <div id="gnav-content">
+      <!-- タイトルを記載ください -->
+      <div class="humb-menu__title">ヘルプメニュー</div>
+
+      <label for="label1">
+        <!-- 親要素の名前 -->
+        <p>チャットボットの使い方</p><p>＋</p>
+      </label>
+      <input type="checkbox" id="label1" class="cssacc" />
+      <div class="accshow">
+        <!-- 子要素の名前 -->
+        <p>右下のボタンを押し、質問したい内容を<br>チャットボットの指示に従い打ち込んでください。</p>
+      </div>
+
+      <label for="label2">
+        <p>言語変更の仕方</p><p>＋</p>
+      </label>
+      <input type="checkbox" id="label2" class="cssacc" />
+      <div class="accshow">
+        <p>左上のボタンから変更できます。</p>
+      </div>
+    </div>
+  </div>
+<!-- ハンバーガーボタンここまで -->
 <header>
 <h1>Foreigners Assist</h1><!-- 大見出し -->
 </header>
