--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <input type="checkbox" id="label1" class="cssacc" />
       <div class="accshow">
         <!-- 子要素の名前 -->
-        <p>右下のボタンを押し、質問したい内容を<br>チャットボットの指示に従い打ち込んでください。</p>
+        <p>右下のボタンを押し、質問したい内容を<br>チャットボットの案内に従い自由に打ち込んでください。</p>
       </div>
 
       <label for="label2">
