--- a/home_vn.html
+++ b/home_vn.html
@@ -38,7 +38,7 @@
       <input type="checkbox" id="label1" class="cssacc" />
       <div class="accshow">
         <!-- 子要素の名前 -->
-        <p>右下のボタンを押し、質問したい内容を<br>チャットボットの指示に従い打ち込んでください。</p>
+        <p>右下のボタンを押し、質問したい内容を<br>表示される選択肢に従い質問してください。</p>
       </div>
 
       <label for="label2">
