--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </main>
 </div>
 <footer>
-<p>Copyright 2021 ChatBot.</p>
+<p>Copyright 2021 Foreigners Assist.</p>
 </footer>
 <style>
   df-messenger {
