--- a/home_vn.html
+++ b/home_vn.html
@@ -75,7 +75,7 @@ Nhấn nút ở dưới cùng bên phải để bắt đầu.</p>
 </main>
 </div>
 <footer>
-<p>Copyright 2021 ChatBot.</p>
+<p>Copyright 2021 Foreigners Assist.</p>
 </footer>
 <!-- Start of HubSpot Embed Code -->
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/21066296.js"></script>
