--- a/home_id.html
+++ b/home_id.html
@@ -73,7 +73,7 @@ tekan panah kiri atas di bot obrolan dan tekan tanda pada kanan atas untuk memul
 </main>
 </div>
 <footer>
-<p>Copyright 2021 ChatBot.</p>
+<p>Copyright 2021 Foreigners Assist.</p>
 </footer>
 <!-- Start of HubSpot Embed Code -->
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/21066296.js"></script>
