--- a/home_en.html
+++ b/home_en.html
@@ -74,7 +74,7 @@ press the arrow on the upper left of the chatbot to return, and press the mark o
 </main>
 </div>
 <footer>
-<p>Copyright 2021 ChatBot.</p>
+<p>Copyright 2021 Foreigners Assist.</p>
 </footer>
 <!-- Start of HubSpot Embed Code -->
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/21066296.js"></script>
