--- a/home_en.html
+++ b/home_en.html
@@ -29,24 +29,24 @@
 
     <div id="gnav-content">
       <!-- タイトルを記載ください -->
-      <div class="humb-menu__title">ヘルプメニュー</div>
+      <div class="humb-menu__title">HELP MENU</div>
 
       <label for="label1">
         <!-- 親要素の名前 -->
-        <p>チャットボットの使い方</p><p>＋</p>
+        <p>How to use a chatbot</p><p>＋</p>
       </label>
       <input type="checkbox" id="label1" class="cssacc" />
       <div class="accshow">
         <!-- 子要素の名前 -->
-        <p>右下のボタンを押し、質問したい内容を<br>表示される選択肢に従い質問してください。</p>
+        <p>Press at the right bottom and ask what you want to ask,<br>type in according to the chatbot's .</p>
       </div>
 
       <label for="label2">
-        <p>言語変更の仕方</p><p>＋</p>
+        <p>How to change the language</p><p>＋</p>
       </label>
       <input type="checkbox" id="label2" class="cssacc" />
       <div class="accshow">
-        <p>左上のボタンから変更できます。</p>
+        <p>You can change it from the button on the top left.</p>
       </div>
     </div>
   </div>
