--- a/home_id.html
+++ b/home_id.html
@@ -29,24 +29,24 @@
 
     <div id="gnav-content">
       <!-- タイトルを記載ください -->
-      <div class="humb-menu__title">ヘルプメニュー</div>
+      <div class="humb-menu__title">Menu Bantuan</div>
 
       <label for="label1">
         <!-- 親要素の名前 -->
-        <p>チャットボットの使い方</p><p>＋</p>
+        <p>Bagaimana Cara Menggunakan Chatboth</p><p>＋</p>
       </label>
       <input type="checkbox" id="label1" class="cssacc" />
       <div class="accshow">
         <!-- 子要素の名前 -->
-        <p>右下のボタンを押し、質問したい内容を<br>表示される選択肢に従い質問してください。</p>
+        <p>klik bagian kanan bawah layar,<br>silakan isi pertanyaan yang ingin anda tanyakan.</p>
       </div>
 
       <label for="label2">
-        <p>言語変更の仕方</p><p>＋</p>
+        <p>cara merubah bahasa</p><p>＋</p>
       </label>
       <input type="checkbox" id="label2" class="cssacc" />
       <div class="accshow">
-        <p>左上のボタンから変更できます。</p>
+        <p>klik tombol bahasa yang ingin anda gunakan dibagian kiri atas layar.</p>
       </div>
     </div>
   </div>
