--- a/home_vn.html
+++ b/home_vn.html
@@ -29,24 +29,24 @@
 
     <div id="gnav-content">
       <!-- タイトルを記載ください -->
-      <div class="humb-menu__title">ヘルプメニュー</div>
+      <div class="humb-menu__title">Trợ giúp</div>
 
       <label for="label1">
         <!-- 親要素の名前 -->
-        <p>チャットボットの使い方</p><p>＋</p>
+        <p>Cách sử dụng Chatbot</p><p>＋</p>
       </label>
       <input type="checkbox" id="label1" class="cssacc" />
       <div class="accshow">
         <!-- 子要素の名前 -->
-        <p>右下のボタンを押し、質問したい内容を<br>表示される選択肢に従い質問してください。</p>
+        <p>Nhấn nút ở dưới cùng bên phải <br>và hỏi những gì bạn muốn hỏi.Đặt câu hỏi theo các tùy chọn được hiển thị.</p>
       </div>
 
       <label for="label2">
-        <p>言語変更の仕方</p><p>＋</p>
+        <p>Cách thay đổi ngôn ngữ</p><p>＋</p>
       </label>
       <input type="checkbox" id="label2" class="cssacc" />
       <div class="accshow">
-        <p>左上のボタンから変更できます。</p>
+        <p>Bạn có thể thay đổi nó từ nút ở phía trên bên trái.</p>
       </div>
     </div>
   </div>
