--- a/home_en.html
+++ b/home_en.html
@@ -76,8 +76,12 @@ press the arrow on the upper left of the chatbot to return, and press the mark o
 <footer>
 <p>Copyright 2021 Foreigners Assist.</p>
 </footer>
-<!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/21066296.js"></script>
-<!-- End of HubSpot Embed Code -->
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="ForeignersAssist_en"
+  agent-id="5e4f4428-d2c3-467b-b51f-e910924a2257"
+  language-code="en"
+></df-messenger>
 </body>
 </html>
