--- a/home_en.html
+++ b/home_en.html
@@ -76,6 +76,16 @@ press the arrow on the upper left of the chatbot to return, and press the mark o
 <footer>
 <p>Copyright 2021 Foreigners Assist.</p>
 </footer>
+<style>
+  df-messenger {
+   --df-messenger-bot-message: white;
+   --df-messenger-button-titlebar-color: #ee82ee;
+   --df-messenger-chat-background-color: #fcf4fc;
+   --df-messenger-font-color: black;
+   --df-messenger-send-icon: #ba55d3;
+   --df-messenger-user-message: white;
+  }
+</style>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
