--- a/home_en.html
+++ b/home_en.html
@@ -64,11 +64,12 @@ In particular, I don't know where to pay [pension, tax, national health insuranc
 or When you forget to pay the money you have to pay,
 I don't know what the rules are,
 Problems such as not being able to receive the support and services that were originally received
-It is a site to solve.
-Press the button at the bottom right to start.</p>
-<p class="hosoku">
+It is a site to solve.</p>
+<!--Press the button at the bottom right to start.</p>-->
+<!--<p class="hosoku">
 *If you cannot switch the chatbot language properly when you switch the language of the website to another language,
 press the arrow on the upper left of the chatbot to return, and press the mark on the upper right to start a new chat. </p>
+-->
 <!-- 本文　ここまで -->
 </section>
 </main>
