--- a/home_en.html
+++ b/home_en.html
@@ -18,7 +18,7 @@
 <a href="index.html" class="btn btn-border">日本語</a>
 <a href="home_en.html" class="btn btn-border">English</a>
 <a href="home_vn.html" class="btn btn-border">Tiếng Việt</a>
-<a href="home_id.html" class="btn btn-border">bahasa Indonesia</a>
+<a href="home_id.html" class="btn btn-border">Bahasa Indonesia</a>
 <!-- ボタン ここまで -->
 <!-- ハンバーガーボタンここから -->
  <div class="humb-menu">
